# semantic-search-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  rustfmt.toml
data/: books.json
examples/: Cargo.toml
proto/: ss.proto
src/: client.rs  embeddings.rs  lib.rs  main.rs  mod.rs  search.rs  server.rs  utils.rs
src/hnsw_index/: api.rs  datamap.rs  dist.rs  filter.rs  flatten.rs  hnsw.rs  hnswio.rs  lib.rs  mod.rs  prelude.rs
