[package]
name = "semantic-search"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["kozistr <kozistr@gmail.com>"]

description = "naive semantic search demo with gRPC server in Rust"
homepage = "https://github.com/kozistr/semantic-search-rs"
readme = "README.md"
repository = "https://github.com/kozistr/semantic-search-rs"

categories = ["search", "retrival"]
keywords = ["semantic-search", "nlp", "bert"]

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "embedding"
path = "src/embeddings.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
serde_json = "^1.0.100"
serde = { version = "^1.0.166", features = ["derive"] }
rust-bert = "^0.21.0"
hora = { version = "^0.1.1", features = ["simd"] }
mimalloc = { version = "*", default-features = false }
tokio = { version = "^1.29.1", features = ["macros", "rt-multi-thread"] }
tonic = "^0.9.2"
prost = "^0.11.9"

[profile.dev]
opt-level = 0
codegen-units = 4
incremental = true
lto = false
panic = "unwind"
debug = 1
debug-assertions = true
overflow-checks = false
rpath = false

[profile.release]
opt-level = 3
codegen-units = 1
incremental = true
lto = "fat"
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
