[package]
name = "semantic-search"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["kozistr <kozistr@gmail.com>"]

description = "naive semantic search demo with gRPC server in Rust"
homepage = "https://github.com/kozistr/semantic-search-rs"
readme = "README.md"
repository = "https://github.com/kozistr/semantic-search-rs"

categories = ["search", "retrival", "server"]
keywords = ["semantic-search", "nlp", "bert", "gRPC", "vector-search", "embedding"]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "embedding"
path = "src/embeddings.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
serde = { version = "^1.0.166", features = ["derive"] }
rust-bert = "^0.21.0"
mimalloc = { version = "*", default-features = false }
tokio = { version = "^1.29.1", features = ["macros", "rt-multi-thread"] }
tonic = "^0.9.2"
prost = "^0.11.9"
anyhow = "^1.0.71"
bincode = "^1.3.3"
parking_lot = "^0.12.1"
rayon = "^1.7.0"
num-traits = "^0.2.15"
hashbrown = { version = "^0.14.0", features = ["rayon", "inline-more"] }
skiplist = "^0.5.1"
lazy_static = "^1.4.0"
mmap-rs = "^0.6.0"
log = "*"
rand = "^0.8.5"
env_logger = "*"
simdeez = "^1.0.8"
packed_simd_2 = "^0.3.8"
indicatif = { version = "^0.17.5", optional = true }
csv = "^1.2.2"

[build-dependencies]
tonic-build = "^0.9.2"

[profile.dev]
opt-level = 0
codegen-units = 4
incremental = true
lto = false
panic = "unwind"
debug = 1
debug-assertions = true
overflow-checks = false
rpath = false

[profile.release]
opt-level = 3
codegen-units = 1
incremental = true
lto = "fat"
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
rpath = false

[features]
embedding = ["indicatif"]
